# SQL-agent

./: pyproject.toml
ai_agent/: main.py
ai_agent/modules/: db.py  llm.py
